--- a/逻辑判断.html
+++ b/逻辑判断.html
@@ -92,7 +92,7 @@
         <div id="u254_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u255" class="text" style="visibility: visible;">
-          <p><span>抓取数据时间</span></p>
+          <p><span>系统时间</span></p>
         </div>
       </div>
 
@@ -303,7 +303,7 @@
         <div id="u296_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u297" class="text" style="visibility: visible;">
-          <p><span>上架时间= publishedDate</span></p>
+          <p><span>发售时间= startSellDate</span></p>
         </div>
       </div>
 
@@ -312,7 +312,7 @@
         <div id="u298_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u299" class="text" style="visibility: visible;">
-          <p><span>发售时间= startSellDate</span></p>
+          <p><span>colorCode</span></p>
         </div>
       </div>
 
@@ -321,25 +321,28 @@
         <div id="u300_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u301" class="text" style="visibility: visible;">
-          <p><span>colorCode</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u302" class="ax_default box_2">
-        <div id="u302_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u303" class="text" style="visibility: visible;">
           <p><span>style</span></p>
         </div>
       </div>
 
       <!-- Unnamed (文本段落) -->
-      <div id="u304" class="ax_default _文本段落">
-        <img id="u304_img" class="img " src="images/逻辑判断/u304.png"/>
+      <div id="u302" class="ax_default _文本段落">
+        <img id="u302_img" class="img " src="images/逻辑判断/u302.png"/>
         <!-- Unnamed () -->
-        <div id="u305" class="text" style="visibility: visible;">
+        <div id="u303" class="text" style="visibility: visible;">
           <p><span>-</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (连接线) -->
+      <div id="u304" class="ax_default _连接线">
+        <img id="u304_seg0" class="img " src="images/逻辑判断/u304_seg0.png" alt="u304_seg0"/>
+        <img id="u304_seg1" class="img " src="images/逻辑判断/u304_seg1.png" alt="u304_seg1"/>
+        <img id="u304_seg2" class="img " src="images/逻辑判断/u304_seg2.png" alt="u304_seg2"/>
+        <img id="u304_seg3" class="img " src="images/逻辑判断/u304_seg3.png" alt="u304_seg3"/>
+        <!-- Unnamed () -->
+        <div id="u305" class="text" style="display: none; visibility: hidden">
+          <p><span></span></p>
         </div>
       </div>
     </div>
